--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,1 +1,36 @@
+name: agrix_beta_2025
+description: A new Flutter project for AgriX – modular rebuild and testing.
+version: 1.0.0+1
+
+environment:
+  sdk: '>=3.2.0 <4.0.0'
+
+dependencies:
+  flutter:
+    sdk: flutter
+
+  cupertino_icons: ^1.0.2
+  qr_flutter: ^4.0.0
+  image_picker: ^1.0.4
+  path_provider: ^2.0.11
+  shared_preferences: ^2.0.15
+  share_plus: ^7.0.0
+  json_annotation: ^4.8.0
+  url_launcher: ^6.1.7
+  flutter_svg: ^2.0.9
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  flutter_lints: ^3.0.1
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
+
+flutter:
+  uses-material-design: true
+
+  assets:
+    - assets/images/
+    - assets/icons/
+    - assets/data/
 
