--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,24 +6,24 @@ environment:
   sdk: '>=3.2.0 <4.0.0'
 
 dependencies:
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.2
-  qr_flutter: ^4.0.0
-  image_picker: ^1.0.4
-  path_provider: ^2.0.11
-  shared_preferences: ^2.0.15
-  share_plus: ^7.0.0
-  json_annotation: ^4.8.0
-  url_launcher: ^6.1.7
   flutter_svg: ^2.0.9
+  font_awesome_flutter: ^10.7.0
+  image_picker: ^1.0.4
+  json_annotation: ^4.8.0
+  path_provider: ^2.0.11
+  qr_flutter: ^4.0.0
+  share_plus: ^7.0.0
+  shared_preferences: ^2.0.15
+  url_launcher: ^6.1.7
 
 dev_dependencies:
+  build_runner: ^2.4.6
+  flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
-  build_runner: ^2.4.6
   json_serializable: ^6.7.1
 
 flutter:
@@ -33,4 +33,3 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/data/
-
