--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   share_plus: ^7.0.0
   shared_preferences: ^2.0.15
   url_launcher: ^6.1.7
+  flutter_secure_storage: ^9.0.0
+  local_auth: ^2.1.6
 
 dev_dependencies:
   flutter_test:
