--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   url_launcher: ^6.1.7
   flutter_secure_storage: ^9.0.0
   local_auth: ^2.1.6
+  uuid: ^4.0.0
 
 dev_dependencies:
   flutter_test:
