--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,19 +8,29 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  # UI & Icons
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.9
   font_awesome_flutter: ^10.7.0
-  image_picker: ^1.0.4
-  json_annotation: ^4.8.0
-  path_provider: ^2.1.1
-  qr_flutter: ^4.0.0
-  share_plus: ^7.0.0
+
+  # Core Functionality
   shared_preferences: ^2.0.15
-  url_launcher: ^6.1.7
   flutter_secure_storage: ^9.0.0
   local_auth: ^2.1.6
   uuid: ^4.0.0
+
+  # Media and Sharing
+  image_picker: ^1.0.4
+  path_provider: ^2.1.1
+  share_plus: ^7.0.0
+  url_launcher: ^6.1.7
+
+  # QR & Utilities
+  qr_flutter: ^4.0.0
+
+  # JSON Serializers
+  json_annotation: ^4.8.0
 
 dev_dependencies:
   flutter_test:
