--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,3 +50,4 @@ flutter:
     - assets/icons/
     - assets/data/investors.json
     - assets/data/system_stats.json
+    - assets/data/officials.json
