--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,9 +22,10 @@ dependencies:
   # 🔷 Utilities & Core
   uuid: ^4.0.0
   url_launcher: ^6.1.7
-  path_provider: ^2.1.1
+  path_provider: ^2.1.2     # ✅ updated to match your request
   image_picker: ^1.0.4
-  share_plus: ^7.0.0
+  share_plus: ^7.0.2        # ✅ updated to latest stable
+  csv: ^5.0.2               # ✅ new dependency for export
   qr_flutter: ^4.0.0
 
   # 🔷 JSON Serialization
