--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,13 +24,13 @@ dependencies:
   url_launcher: ^6.1.7
   path_provider: ^2.1.2
   image_picker: ^1.0.4
-  share_plus: ^7.0.2
+  share_plus: ^6.3.1         # ✅ Downgraded to resolve ffi conflict
   csv: ^5.0.2
   qr_flutter: ^4.0.0
 
   # 🔷 TFLite for AI Inference (✔ compatible pairing)
   tflite_flutter: ^0.9.0
-  tflite_flutter_helper: ^0.3.1
+  tflite_flutter_helper: ^0.2.1
 
   # 🔷 JSON Serialization
   json_annotation: ^4.8.0
