--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,29 +12,29 @@ dependencies:
   # 🔷 UI & Icons
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.9
-  font_awesome_flutter: ^10.7.0         # ✅ Used for WhatsApp, Telegram, Dashboard icons
+  font_awesome_flutter: ^10.7.0         # ✅ WhatsApp, Telegram, Dashboard icons
 
   # 🔷 State & Storage
   shared_preferences: ^2.0.15           # ✅ Local session and preferences
-  flutter_secure_storage: ^8.1.0        # ✅ For sensitive data
-  local_auth: ^2.1.6                    # ✅ Biometrics
+  flutter_secure_storage: ^8.1.0        # ✅ Secure PIN/role storage
+  local_auth: ^2.1.6                    # ✅ Biometric auth
 
   # 🔷 Utilities & Core
-  uuid: ^4.0.0                          # ✅ ID generation
-  url_launcher: ^6.1.7                 # ✅ WhatsApp, Telegram, Email deep linking
-  path_provider: ^2.1.2                 # ✅ File persistence (e.g. tasks, profiles)
-  image_picker: ^1.0.4                  # ✅ Image capture/upload
-  share_plus: ^6.3.1                    # ✅ System share functionality
-  csv: ^5.0.2                           # ✅ For livestock/soil/crop rule parsing
-  qr_flutter: ^4.0.0                    # ✅ QR code for user/farmer profiles
-  intl: ^0.18.1                         # ✅ Date formatting, future i18n
+  uuid: ^4.0.0                          # ✅ UUIDs for farmers/contracts
+  url_launcher: ^6.1.7                 # ✅ Launch SMS, WhatsApp, browser
+  path_provider: ^2.1.2                 # ✅ App file system
+  image_picker: ^1.0.4                  # ✅ Image scanning / upload
+  share_plus: ^6.3.1                    # ✅ Share farmer profile
+  csv: ^5.0.2                           # ✅ Parse rule engines
+  qr_flutter: ^4.0.0                    # ✅ QR code generation
+  intl: ^0.18.1                         # ✅ Date formatting / future i18n
 
   # 🔷 JSON Serialization
-  json_annotation: ^4.8.0               # ✅ Used with build_runner + json_serializable
+  json_annotation: ^4.8.0               # ✅ Required for model generation
 
   # 🔷 Firebase
-  firebase_core: ^2.31.0                # ✅ Firebase setup
-  cloud_firestore: ^4.15.0              # ✅ Investor profiles, diagnostics (cloud option)
+  firebase_core: ^2.31.0                # ✅ Core setup
+  cloud_firestore: ^4.15.0              # ✅ Cloud storage for investor/diagnostic modules
 
 dev_dependencies:
   flutter_test:
@@ -55,20 +55,20 @@ flutter:
     - assets/images/crops/
     - assets/crops/
 
-    # 🐄 Livestock rules and images
+    # 🐄 Livestock
     - assets/data/livestock_rules.csv
     - assets/images/livestock/
 
-    # 🪴 Soil map and images
+    # 🪴 Soil
     - assets/data/soil_map_africa.csv
     - assets/images/soil/
 
-    # 📊 JSON data
+    # 📊 Static JSON (investor, trader, official dashboards)
     - assets/data/investors.json
     - assets/data/system_stats.json
     - assets/data/officials.json
     - assets/data/traders.json
 
-    # 🖼 General
+    # 🖼 General images/icons fallback
     - assets/images/
     - assets/icons/
